Fixed a stupid bug : forgot to set z-index to an invalid value when inactive

--- a/css/spinner-lord.css
+++ b/css/spinner-lord.css
@@ -86,6 +86,7 @@ body{
 
 #spinner-lord.inactive, #spinner-lord.inactive * {
 	opacity: 0;
+    z-index: -1;
 }
 
 /*/////////////////////////////////////////////////////////////////*/
